--- a/index.html
+++ b/index.html
@@ -40,5 +40,54 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
+
+    <section class="productsection">
+        <h3>New <span>Bags</span> Collection</h3>
+
+        <div class="product">
+            <div class="productbox">
+                <img src="img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Geniune Leather Bags</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Geniune Leather Bags</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Geniune Leather Bags</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Geniune Leather Bags</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Geniune Leather Bags</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_shopping_app_flsj.svg" alt="">
+                <p>Black Geniune Leather Bags</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+        </div>
+    </section>
 </body>
 </html>
