--- a/index.html
+++ b/index.html
@@ -89,5 +89,17 @@
 
         </div>
     </section>
+
+
+    <section class="about">
+        <div class="aboutbox">
+            <h1>About Us</h1>
+            <h4>Small E-commerce Platfrom in 2022. Made By Shahir Rahman <span>Buy Now</span></h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia quisquam, commodi, corporis quod ea recusandae harum incidunt accusamus non molestias ex doloribus exercitationem dolor nobis optio praesentium vitae maxime dicta, aut sed possimus cumque! Rerum beatae doloribus necessitatibus debitis ipsum.</p>
+        </div>
+        <div class="aboutbox">
+            <img src="img/undraw_heatmap_uyye.svg">
+        </div>
+    </section>
 </body>
 </html>
