--- a/index.html
+++ b/index.html
@@ -101,5 +101,72 @@
             <img src="img/undraw_heatmap_uyye.svg">
         </div>
     </section>
+
+
+
+    <section class="productsection">
+
+        <h3>Watch<span>es</span> <span>Show</span>case</h3>
+        <div class="product">
+            <div class="productbox">
+                <img src="img/undraw_watch_application_uhc9.svg" alt="">
+                <p>Black Geniune  watch</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_in_no_time_6igu.svg" alt="">
+                <p>Black Geniune watch</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_smartwatch_74tv.svg" alt="">
+                <p>Black Geniune watch</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_watch_application_uhc9.svg" alt="">
+                <p>Black Geniune watch</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_in_no_time_6igu.svg" alt="">
+                <p>Black Geniune watch</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+            <div class="productbox">
+                <img src="img/undraw_smartwatch_74tv.svg" alt="">
+                <p>Black Geniune watch</p>
+                <a href="">$23.3</a>
+                <a href=""class="buybtn">Add TO Cart</a>
+            </div>
+
+        </div>
+    </section>
+
+
+    <section class="notification">
+        <h1>Subcribe For New Product Notification</h1>
+        <div class="notificationinput">
+            <input type="email" placeholder="Enter Your E-mail">
+            <a href="" class="notificationbtn">SEND</a>
+        </div>
+    </section>
+
+    <hr>
+    <footer>
+        <p>©AllRight Reserved By Shahir Rahman</p>
+    </footer>
+
+    
 </body>
 </html>
